Fix issue for overlap of the sidebar for phones.

--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -29,3 +29,8 @@
   bottom: 0;
   z-index: 20;
 }
+
+/* Fix issue for overlap */
+.sidebar-phone .items {
+  margin-block: -14px;
+}
